# Process this file with autoconf to produce a configure script.
AC_INIT(NFFT, 3.0.0, potts@math.uni-luebeck.de)
AC_CONFIG_HEADERS([include/config.h:include/config.h.in])

AC_CONFIG_SRCDIR(include/nfft3.h)

AM_INIT_AUTOMAKE
AM_ENABLE_SHARED(no)
AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AM_PROG_LIBTOOL

# Checks for libraries.
AC_CHECK_LIB(fftw3,fftw_execute,,,)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(complex.h malloc.h time.h stdbool.h string.h fftw3.h)

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([mallinfo])

# Additional options

AC_OUTPUT(Makefile \
          include/Makefile \
          util/Makefile \
          kernel/Makefile \
          kernel/dpt/Makefile \
          kernel/nfft/Makefile \
          lowlevel/Makefile \
          lowlevel/nnfft/Makefile \
          lowlevel/nsfft/Makefile \
          lowlevel/mri_inh/Makefile \
          highlevel/Makefile \
          highlevel/solver/Makefile \
          highlevel/fastsum/Makefile \
          lowlevel/nfsft/Makefile \
          lowlevel/nfsft/obsolete/Makefile \
          kernel/nfct/Makefile \
          kernel/nfst/Makefile \
          lowlevel/texture/Makefile \
          examples/Makefile \
          examples/kernel/Makefile \
          examples/lowlevel/Makefile \
          examples/highlevel/Makefile \
          examples/kernel/dpt/Makefile \
          examples/kernel/nfft/Makefile \
          examples/lowlevel/nnfft/Makefile \
          examples/lowlevel/nnfft/accuracy/Makefile \
          examples/lowlevel/nnfft/simple_test/Makefile \
          examples/lowlevel/mri_inh/Makefile \
          examples/lowlevel/mri_inh/mri2d/Makefile \
          examples/lowlevel/mri_inh/mri3d/Makefile \
          examples/highlevel/exp/Makefile \
          examples/lowlevel/nsfft/Makefile \
          examples/lowlevel/nfsft/Makefile
          examples/lowlevel/nfsft/obsolete/Makefile
          examples/highlevel/fastgauss/Makefile \
          examples/lowlevel/texture/Makefile \
          examples/lowlevel/texture/test/Makefile \
          examples/lowlevel/texture/regularity/Makefile \
          examples/lowlevel/texture/performance/Makefile \
          examples/kernel/nfct/Makefile \
          examples/kernel/nfst/Makefile
)
