# Process this file with autoconf to produce a configure script.
AC_INIT(NFFT, 3.0.0, potts@math.uni-luebeck.de)
AC_CONFIG_HEADERS([include/config.h:include/config.h.in])

# Set configure source directory
AC_CONFIG_SRCDIR(include/nfft3.h)

# Initialise automake
AM_INIT_AUTOMAKE

# TO hell with shared libraries
AM_ENABLE_SHARED(no)

# Get canocical host identifier
AC_CANONICAL_HOST

# Checks for programs
AC_PROG_INSTALL
AC_PROG_CC
AM_PROG_LIBTOOL

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(complex.h malloc.h time.h stdbool.h string.h fftw3.h)

# Checks for libraries
AC_CHECK_LIB(fftw3,fftw_execute,,,)

# Checks for library functions.

# Checks for typedefs, structures, and compiler characteristics

# Additional command-line options
AC_ARG_WITH(
  tests,
  AC_HELP_STRING(
    [--with-tests],
    [Compile with unit tests. Run 'make test' to execute the tests.]),
    [
      AC_CHECK_HEADERS(CUnit/CUnit.h,[found_cunit=true],[found_cunit=false])
      if test "$found_cunit" = "true"; then
        AC_CHECK_LIB(cunit,CU_initialize_registry,[found_cunit=true],[found_cunit=false])
        if test "$found_cunit" = "true"; then
          AM_CONDITIONAL(WITH_TESTS,true)
        else
          AC_MSG_NOTICE([Couldn't find CUnit library. Tests won't be compiled.])
          AM_CONDITIONAL(WITH_TESTS,false)
        fi
      else
        AC_MSG_NOTICE([Couldn't find CUnit library headers. Tests won't be compiled.])
        AM_CONDITIONAL(WITH_TESTS,false)
      fi
    ],
    [AM_CONDITIONAL(WITH_TESTS,false)])


# The output files to be generated
AC_OUTPUT(Makefile \
          include/Makefile \
          util/Makefile \
          kernel/Makefile \
          kernel/fpt/Makefile \
          kernel/nfft/Makefile \
          lowlevel/Makefile \
          lowlevel/nnfft/Makefile \
          lowlevel/nsfft/Makefile \
          lowlevel/mri_inh/Makefile \
          highlevel/Makefile \
          highlevel/solver/Makefile \
          highlevel/fastsum/Makefile \
          lowlevel/nfsft/Makefile \
          lowlevel/nfsft/obsolete/Makefile \
          kernel/nfct/Makefile \
          kernel/nfst/Makefile \
          lowlevel/texture/Makefile \
          examples/Makefile \
          examples/kernel/Makefile \
          examples/lowlevel/Makefile \
          examples/highlevel/Makefile \
          examples/radon/Makefile \
          examples/polarFFT/Makefile \
          examples/kernel/fpt/Makefile \
          examples/kernel/nfft/Makefile \
          examples/lowlevel/nnfft/Makefile \
          examples/lowlevel/nnfft/accuracy/Makefile \
          examples/lowlevel/nnfft/simple_test/Makefile \
          examples/lowlevel/mri/Makefile \
          examples/lowlevel/mri/mri2d/Makefile \
          examples/lowlevel/mri/mri3d/Makefile \
          examples/highlevel/exp/Makefile \
          examples/lowlevel/nsfft/Makefile \
          examples/lowlevel/nfsft/Makefile \
          examples/lowlevel/nfsft/obsolete/Makefile \
          examples/lowlevel/texture/Makefile \
          examples/lowlevel/texture/correctness/Makefile \
          examples/lowlevel/texture/data_creator/Makefile \
          examples/lowlevel/texture/interpolation/Makefile \
          examples/lowlevel/texture/matrix/Makefile \
          examples/lowlevel/texture/performance/Makefile \
          examples/lowlevel/texture/regularity/Makefile \
          examples/lowlevel/texture/regularity2/Makefile \
          examples/lowlevel/texture/texture_util/Makefile \
          examples/highlevel/fastgauss/Makefile \
          examples/kernel/nfct/Makefile \
          examples/kernel/nfst/Makefile \
          examples/fastsumS2/Makefile \
          examples/quadratureS2/Makefile \
          tests/Makefile \
          tests/kernel/Makefile \
          tests/kernel/fpt/Makefile \
          tests/lowlevel/Makefile \
          tests/lowlevel/nfsft/Makefile \
)
#          examples/fastsum/Makefile \
